bat.bool1.diff21.Diff21.scala.code
def diff21(n:Int): Int = {
  var x=0
  if (n>21){
    x=Maths.abs(21-n)
    return x*2
  }
  else {
    x=Maths.abs(21-n)
    return x
  }
}